# homework_20.7_skillbox_prod

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: forms.py
